# eligos

./: .gitignore  Cargo.toml  README.md
src/: .conn.rs.swp  .envelope.rs.swp  .lib.rs.swp  .receive.rs.swp  .service.rs.swp  .worker.rs.swp  client_info.rs  conn.rs  envelope.rs  lib.rs  receive.rs  send_channel.rs  service.rs  worker.rs
src/codec/: .mod.rs.swp  codec_stack.rs  framed.rs  mod.rs
test/: .test_service.rs.swp  test.rs  test_service.rs
